[package]
name = "pyever-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyever_send"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.52"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
everscale-jrpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }
hex = "0.4.3"

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
pyo3 = { version = "0.16", features = ["extension-module", "anyhow"] }

ton_block = { git = "https://github.com/broxus/ton-labs-block.git", default-features = false }
tokio = "1.20.1"
