[package]
name = "pyever-send"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyever_send"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.52"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
everscale-jrpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }
hex = "0.4.3"

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
openssl = { version = "0.10.41", features = ["vendored"] }
pyo3 = { version = "0.17.2", features = ["extension-module", "anyhow"] }
serde_json = "1.0.89"
tokio = "1.20.1"

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git", default-features = false }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git", default-features = false }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git", default-features = false }
