[package]
name = "pyever-send"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyever_send"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.1"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
everscale-jrpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }
hex = "0.4.3"
log = "0.4.17"

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
pyo3 = { version = "0.17.2", features = ["extension-module", "anyhow"] }
pyo3-log = "0.7.0"
serde_json = "1.0.89"

openssl = { features = ["vendored"], version = "0.10.44" }

tokio = "1.24.2"
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git", default-features = false }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git", default-features = false }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git", default-features = false }
